--- a/sections/Testing/AngleTest.tex
+++ b/sections/Testing/AngleTest.tex
@@ -1,16 +1,16 @@
 \chapter{Angle Test}\label{angleTest}
 The turret has one main variable it can change in order to accurately hit the
-target, namely the angle of firing. Due to the importance of being able to
-precisely set the angle of firing, tests have been made to ensure that the
-turrets accuracy is within an acceptable margain of error.
+target, namely the vertical angle of firing. Due to the importance of being able
+to precisely set the angle of firing, tests have been made to ensure that the
+turrets accuracy is within an acceptable margin of error.
 
 \section{Test Setup}
 The setup for this test was to use a protractor to measure the angle of the
-turret in relation to the horizontal. In order to have a stable and
-consistant position to measure the angle from, a lego structure was added to the
-turrets base. As the turret is shifted in relation to the pivot point, a lego
-brick was added which connects to the pivot point and is parallel to the turret.
-This brick is used to measure the turrets angle. This setup can be seen in
+cannon in relation to the horizontal allignment. In order to have a stable and
+consistent position to measure the angle from, a LEGO structure was added to the
+turret's base. As the cannon is shifted in relation to the pivot point, a LEGO
+brick was added which connects to the pivot point and is parallel to the cannon.
+This brick is used to measure the cannon's angle. This setup can be seen in
 \autoref{AngleTestSetup}.
 
 \figx[0.13]{AngleTestSetup}{Setup for testing the turrets angle.}
@@ -30,7 +30,7 @@ specified angle of fire. The data presented below in
 \dataTable{AngleTest1}{Test results from resetting the position between
 tests.}{AngleTest1Result}
 
-From these data we can determine that the maximum difference in angles is 3
+From this data we can determine that the maximum difference in angles is 3
 degrees.  
 
 \section{Results: Dynamic Position}
@@ -38,16 +38,16 @@ This test had the turret set the angle as an offset based on the previously set
 angle. This means that the turret is not reset to its resting position between
 tests. This is done in order to determine the turrets ability to dynamically and
 accurately set its angle of fire. The data presented below in
-\autoref{AngleTest2Result} is the average from 5 repetitions.
+\autoref{table:AngleTest2Result} is the average from 5 repetitions.
 
 \dataTable{AngleTest2}{Test results from dynamically setting the angle.}{AngleTest2Result}
 
-From these data we can determine that the maximum difference in angles is 2
+From this data we can determine that the maximum difference in angles is 2
 degrees, which is slightly more accurate than the previous test.
 
 \section{Conclusion: Angle Test}
-From the 10 tests we can conclude that the turret capabilities when it comes to
-setting the correct angle are satisfactory. While there is a difference of up to
-3 degrees between the expected and actual angle, we conclude that this is well
-within the acceptable variance, especaially since the turret will not have to
-hit a target over a longer distance.   
+From the 10 tests we can conclude that the turret's capability to set the
+correct angle are satisfactory. While there is a difference of up to 3 degrees
+between the expected and actual angle, we conclude that this is well within the
+acceptable variance, especially since the turret will not have to hit a target
+at a longer distance.
