--- a/sections/Design/BNDesig/CondProbTables.tex
+++ b/sections/Design/BNDesig/CondProbTables.tex
@@ -100,7 +100,7 @@ BV & 21/40 = 0.52  \\ \hline
 \end{table}
 
 %done
-\begin{table}[]
+\begin{table}[H]
 \centering
 \begin{tabular}{|l|l|l|l|}
 \hline
