The fucking the BS

--- a/sections/Implementation/MIImplementation/ImplBN.tex
+++ b/sections/Implementation/MIImplementation/ImplBN.tex
@@ -1,7 +1,7 @@
 \chapter{Implementation of the Belief Network}
 This chapter will be used to describe how the belief network could be
 implemented. There will also be a discussion of the pros and cons of the
-the different solutions.
+different solutions.
 
 \section{Implementation}
 We did not implement a belief network, therefore this section will be used to
